# romtools

./: .copier-answers.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  _pre_commit_checks.py  pyproject.toml
scripts/: .gitignore  defaults.json  example-forecast-config.json  example-post-config.json  forecast.py  iepc.mplstyle  ode.py  performance.py  postprocess.py  requirements.txt  sliding_window.py  temp_dmd.py
src/romtools/: __init__.py  dataloader.py  example.py  plotting.py  utils.py
src/romtools/subpackage/: __init__.py  another_example.py
tests/: conftest.py  test_examples.py
